Grace/tests/gibbs/errors/t069.grace
// ERROR = P1018
method returnNothing {
    return .
}
